# ChangeLog for app-emulation/kqemu
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/ChangeLog,v 1.31 2011/02/22 18:20:30 cardoe Exp $

  22 Feb 2011; Doug Goldstein <cardoe@gentoo.org> -kqemu-0.7.2.ebuild:
  Remove old version

  18 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  kqemu-1.4.0_pre1-r1.ebuild, +files/kqemu-1.4.0_pre1-init_MUTEX.patch:
  Non-maintainer commit. Apply patch to build against 2.6.37. Thanks to
  Alexandre Rostovtsev <tetromino@gmail.com>. Bug #350746

*kqemu-1.4.0_pre1-r1 (20 Nov 2009)

  20 Nov 2009; Matthias Schwarzott <zzam@gentoo.org>
  +kqemu-1.4.0_pre1-r1.ebuild:
  Move modprobe config file to new location, Bug #275151. Remove deprecated
  NAME=%k from udev rule.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> kqemu-0.7.2.ebuild:
  Remove virtual/libc

  25 May 2009; Luca Barbato <lu_zero@gentoo.org> kqemu-1.4.0_pre1.ebuild:
  fix bug #214032, thanks to Federico Fissore <federico@fsfe.org> for
  pointing out

  09 Mar 2009; Luca Barbato <lu_zero@gentoo.org> kqemu-1.4.0_pre1.ebuild:
  Additional fixes

  09 Mar 2009; Luca Barbato <lu_zero@gentoo.org>
  +files/kqemu-1.4.0_pre1-missing-sched-header.patch,
  kqemu-1.4.0_pre1.ebuild:
  Fix bug #261664, thanks to pva for doing all the work

*kqemu-1.4.0_pre1 (06 Mar 2009)

  06 Mar 2009; Luca Barbato <lu_zero@gentoo.org> +kqemu-1.4.0_pre1.ebuild:
  New version

  13 Dec 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  kqemu-1.3.0_pre11.ebuild:
  Die if make fails.

  24 Mar 2008; Luca Barbato <lu_zero@gentoo.org> kqemu-1.3.0_pre11.ebuild:
  Dynamic device '/dev/kqemu' creation is now the default. modules conf isn't
  necessary anymore

  27 Jul 2007; Luca Barbato <lu_zero@gentoo.org>
  +files/kqemu-1.3.0_pre11-sched_h.patch, kqemu-1.3.0_pre11.ebuild:
  fix bug #185170, using the same patch as reported in DebianBug#434031,
  thanks to Dominik Paulus <dominik.paulus@web.de> for pointing it
