@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/kqemu-1.4.0_pre1-r1.ebuild,v 1.2 2011/01/18 20:55:25 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/kqemu-1.4.0_pre1-r1.ebuild,v 1.3 2011/03/17 22:44:03 tomka Exp $
 
 inherit eutils flag-o-matic linux-mod toolchain-funcs
 
@@ -13,7 +13,7 @@ SRC_URI="http://bellard.org/qemu/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="-* ~amd64 ~x86"
+KEYWORDS="-* ~amd64 x86"
 RESTRICT="strip"
 IUSE=""
 
