@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.83 2011/02/28 16:36:49 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.84 2011/03/17 22:47:12 tomka Exp $
+
+  17 Mar 2011; Thomas Kahle <tomka@gentoo.org> qemu-0.11.1.ebuild:
+  x86 stable per bug 356685
 
   28 Feb 2011; Doug Goldstein <cardoe@gentoo.org> -qemu-0.9.1.ebuild:
   Remove old version
