@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/kqemu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/ChangeLog,v 1.31 2011/02/22 18:20:30 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/kqemu/ChangeLog,v 1.32 2011/03/17 22:44:03 tomka Exp $
+
+  17 Mar 2011; Thomas Kahle <tomka@gentoo.org> kqemu-1.4.0_pre1-r1.ebuild:
+  x86 stable per bug 356685
 
   22 Feb 2011; Doug Goldstein <cardoe@gentoo.org> -kqemu-0.7.2.ebuild:
   Remove old version
